@@ -349,19 +349,19 @@ namespace DFHack
         inline df::enums::biome_type::biome_type getBiomeType(int16_t region_x, int16_t region_y) { return getBiomeTypeWithRef(region_x, region_y, region_y); }
 
         // Check if tile is an aquifer
-        extern DFHACK_EXPORT bool isTileAquifer(int32_t x, int32_t y, int32_t z);
+        DFHACK_EXPORT bool isTileAquifer(int32_t x, int32_t y, int32_t z);
         inline bool isTileAquifer(df::coord pos) { return isTileAquifer(pos.x, pos.y, pos.z); }
 
         // Check if tile is a heavy aquifer
-        extern DFHACK_EXPORT bool isTileHeavyAquifer(int32_t x, int32_t y, int32_t z);
+        DFHACK_EXPORT bool isTileHeavyAquifer(int32_t x, int32_t y, int32_t z);
         inline bool isTileHeavyAquifer(df::coord pos) { return isTileHeavyAquifer(pos.x, pos.y, pos.z); }
 
         // Make tile into an aquifer
-        extern DFHACK_EXPORT bool setTileAquifer(int32_t x, int32_t y, int32_t z, bool heavy = false);
+        DFHACK_EXPORT bool setTileAquifer(int32_t x, int32_t y, int32_t z, bool heavy = false);
         inline bool setTileAquifer(df::coord pos, bool heavy = false) { return setTileAquifer(pos.x, pos.y, pos.z, heavy); }
 
         // Remove aquifer from tile
-        extern DFHACK_EXPORT bool removeTileAquifer(int32_t x, int32_t y, int32_t z);
+        DFHACK_EXPORT bool removeTileAquifer(int32_t x, int32_t y, int32_t z);
         inline bool removeTileAquifer(df::coord pos) { return removeTileAquifer(pos.x, pos.y, pos.z); }
     }
 }
