@@ -71,6 +71,10 @@ Template for new versions:
 
 ## API
 - Focus strings have moved for stockpile states: ``dwarfmode/CustomStockpile`` is now ``dwarfmode/Stockpile/Some/Customize`` and similar for ``dwarfmode/StockpileTools`` and ``dwarfmode/StockpileLink``
+- ``Maps::isTileAquifer``: check if tile is an aquifer
+- ``Maps::isTileHeavyAquifer``: check if tile is a heavy aquifer
+- ``Maps::setTileAquifer``: make tile into an aquifer
+- ``Maps::removeTileAquifer``: remove aquifer from tile
 
 ## Lua
 - ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)
@@ -81,6 +85,11 @@ Template for new versions:
 - ``safe_index``: will now return nil when attempting to index into a non-indexable object
 - ``script-manager``: add ``getModSourcePath`` and ``getModStatePath`` so modders can get the directory path to their own files
 - ``widgets.FilteredList``: don't restrict the player from inputting multiple successive space characters
+- ``dfhack.maps.isTileAquifer``: check if tile is an aquifer
+- ``dfhack.maps.isTileHeavyAquifer``: check if tile is a heavy aquifer
+- ``dfhack.maps.setTileAquifer``: make tile into an aquifer
+- ``dfhack.maps.removeTileAquifer``: remove aquifer from tile
+
 
 ## Removed
 
